src/app/main/shared/navbar/navbar.component.scss
.app-navbar {
  align-items: center;
  height: 12vh;
  width: 100%;

  .back-button{
    background-color: inherit;
    outline: none;
    position: absolute;
    left: 12px;
    &:hover,
    &:active {
      cursor: pointer;
      background-color: #00000010;
    }
}

  .navbar-title {
    padding-left:8%;
    color: #343434;
    font-size: 24px;
    font-family: roboto;
    opacity: 1;
    min-width: 90px;
    //width:100%;
    overflow: hidden;
    text-overflow: ellipsis;
    display: -webkit-box;
    -webkit-box-orient: vertical;
    -webkit-line-clamp: 1;
  }

  .all-icons-mobile {
    display: none;
  }

  .all-icons {
    display: flex;
    align-items: center;
    min-height: 84px;
    padding-right: 10%;
    .icon-items {
      margin-left: 20px;
      background: transparent;
      &:hover,
      &:active {
        cursor: pointer;
        background-color: #00000010;
      }
    }
  }
  #goto_desktop {
    margin-left: 20px;
    cursor: pointer;
  }
  .unread-count {
    position: absolute;
    height: 25px;
    width: 25px;
    left: 20px;
    top: 20px;
    background-color: #fa3e3e;
    border-radius: 50%;
    color: #ffffff;
    font-size: 12px;
    line-height: 25px;
    text-align: center;
  }
}

@media screen and (min-width: 768px) and (max-width: 991px) {
  .app-navbar {
    .all-icons {
      padding-right: 7%;
    }
    .navbar-title {
      padding-left: 4%;
    }
  }
}

// @media screen and (max-width: 992px) {
// .app-navbar {
//     height: 20px;
//     .all-icons {
//         position: absolute;
//         top: -80px;
//         right: 10px;
//         .icon-items {
//             margin: 10px 20px;
//         }
//         .unread-count {
//             left: 64px;
//         }
//     }
// }
// }
@media screen and (max-width: 767px) {
  .app-navbar {
    height: 0px!important;

    h1 {
      font-size: 1.2rem;
    }
  }

}

@media screen and (min-width: 599px) and (max-width: 960px) {
.app-navbar {
  height: 3vh;
  .all-icons-mobile {
    top: -45px !important;
  }
}
}

@media screen and (min-width: 961px) {

  // putting this 960 as otherwise no nav bar is shown
  .app-navbar {
     min-height: 84px;
  }
  }

@media screen and (max-width: 960px) {

  // putting this 960 as otherwise no nav bar is shown
  .app-navbar {
    align-items: inherit;

    .navbar-title {
      padding-left: 0px;
      margin-left:46px;
      top: 3px;
      color: white;
      font-size: 20px;
    }
    .back-button{
      background-color: inherit;
      outline: none;
      line-height: 0;
      min-width:24px;
      padding-right: 0;
      bottom: -5px;
      position: absolute;
    }

    .all-icons-mobile {
      display: block;
      position: absolute;
      top: -42px;
      //top: 15px;
      right: 15px;
      width:100%;

      .icon-items {
        //margin-left: 12px;
        bottom: 5px;
      }
      .hamburger-button{
        background-color: inherit;
        padding: 0;
        line-height: 0;
        min-width: 24px;
        margin-left:16px;
      }

      #showFullConversation {
        color: white !important;
        line-height: 0;
        height: 24px;
        width:24px;
        padding-right: 0;
      }
    }
    .unread-count {
      left: 20px;
      line-height: 20px;
      height: 20px;
      width: 20px;
      top: 22px;
    }

    // height: 20px;
    .all-icons {
      display: none
    }
  }
}

